--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="343dp"
     android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SearchDialogFragment">
+    tools:context=".ui.SearchDialogFragment">
 
     <EditText
         android:id="@+id/edit_text"
