--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -21,6 +21,7 @@
         android:layout_marginEnd="79dp"/>
 
     <TextView
+        android:id="@+id/temp"
         android:layout_width="26dp"
         android:layout_height="28dp"
         tools:text="13"
@@ -30,14 +31,17 @@
         android:layout_marginEnd="8dp"/>
 
     <TextView
+        android:id="@+id/max_temp"
         android:layout_width="26dp"
         android:layout_height="28dp"
         tools:text="13"
+        android:textColor="#8F96A1"
         android:textSize="16sp"
         android:maxLines="1"
         android:layout_marginEnd="16dp"/>
     
     <ImageView
+        android:id="@+id/image"
         android:layout_width="30dp"
         android:layout_height="24dp"
         tools:src="@tools:sample/avatars"/>
