--- a/app/src/main/res/layout/fragment_daily_weather.xml
+++ b/app/src/main/res/layout/fragment_daily_weather.xml
@@ -53,6 +53,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
