--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -4,47 +4,59 @@
     android:layout_height="206dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/rounded_corner"
-    android:layout_marginHorizontal="16dp"
-    android:orientation="horizontal"
+    android:layout_marginHorizontal="25dp"
+    android:orientation="vertical"
     android:paddingTop="16dp"
     android:paddingHorizontal="20dp"
     android:layout_marginTop="8dp">
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="118dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="28dp"
-        tools:text="@tools:sample/lorem"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:maxLines="1"
-        android:layout_marginEnd="79dp"/>
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp">
 
-    <TextView
-        android:id="@+id/temp"
-        android:layout_width="26dp"
-        android:layout_height="28dp"
-        tools:text="13"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:maxLines="1"
-        android:layout_marginEnd="8dp"/>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="118dp"
+            android:layout_height="28dp"
+            tools:text="@tools:sample/lorem"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:maxLines="1"
+            android:layout_marginEnd="79dp"/>
 
-    <TextView
-        android:id="@+id/max_temp"
-        android:layout_width="26dp"
-        android:layout_height="28dp"
-        tools:text="13"
-        android:textColor="#8F96A1"
-        android:textSize="16sp"
-        android:maxLines="1"
-        android:layout_marginEnd="16dp"/>
-    
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="30dp"
-        android:layout_height="24dp"
-        tools:src="@tools:sample/avatars"/>
+        <TextView
+            android:id="@+id/temp"
+            android:layout_width="26dp"
+            android:layout_height="28dp"
+            tools:text="13"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:maxLines="1"
+            android:layout_marginEnd="8dp"/>
 
+        <TextView
+            android:id="@+id/max_temp"
+            android:layout_width="26dp"
+            android:layout_height="28dp"
+            tools:text="13"
+            android:textColor="#8F96A1"
+            android:textSize="16sp"
+            android:maxLines="1"
+            android:layout_marginEnd="16dp"/>
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="30dp"
+            android:layout_height="24dp"
+            tools:src="@tools:sample/avatars"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="300dp"
+        android:layout_height="1dp"
+        android:background="#D9E0EA"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
