--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_width="311dp"
         android:layout_height="40dp"
         android:gravity="center"
-        android:text="@string/hello_blank_fragment"
+        android:hint="@string/hello_blank_fragment"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
