--- a/app/src/main/res/layout/fragment_daily_weather.xml
+++ b/app/src/main/res/layout/fragment_daily_weather.xml
@@ -25,6 +25,7 @@
             app:tint="#8F96A1" />
 
         <TextView
+            android:id="@+id/city"
             android:layout_width="240dp"
             android:layout_height="30dp"
             tools:text="@tools:sample/lorem"
