--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -12,6 +12,7 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:hint="@string/hello_blank_fragment"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,6 +23,11 @@
         android:layout_width="151dp"
         android:layout_height="40dp"
         android:text="@string/cancel"
+        android:layout_marginTop="68dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/edit_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_add"
@@ -32,6 +38,10 @@
         android:layout_width="151dp"
         android:layout_height="40dp"
         android:text="@string/add"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/edit_text"
         app:layout_constraintStart_toEndOf="@id/button_cancel"
         app:layout_constraintEnd_toEndOf="parent"
