Fix search dialog
Add rounded corner.

--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -4,7 +4,8 @@
     android:layout_width="343dp"
     android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.SearchDialogFragment">
+    tools:context=".ui.SearchDialogFragment"
+    android:background="@drawable/rounded_corner_dialog">
 
     <EditText
         android:id="@+id/edit_text"
