--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -1,51 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="343dp"
     android:layout_height="180dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.SearchDialogFragment"
-    android:background="@drawable/rounded_corner_dialog">
+    android:background="@drawable/rounded_corner_dialog"
+    tools:context=".ui.SearchDialogFragment">
 
     <EditText
         android:id="@+id/edit_text"
         android:layout_width="311dp"
         android:layout_height="40dp"
-        android:gravity="center"
-        android:hint="@string/hello_blank_fragment"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textCapSentences"
+        android:paddingStart="40dp"
+        android:textColor="#2A2D33"
+        android:hint="@string/hello_blank_fragment"
+        android:background="@drawable/box_edittext"
+        app:layout_constraintBottom_toTopOf="@id/button_cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/button_cancel"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
+
+    <ImageButton
+        android:id="@+id/img"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:tint="#8F96A1"
+        android:src="@drawable/search"
+        android:background="@color/white"
+        android:layout_marginStart="12dp"
+        app:layout_constraintStart_toStartOf="@id/edit_text"
+        app:layout_constraintBottom_toBottomOf="@id/edit_text"
+        app:layout_constraintTop_toTopOf="@id/edit_text"/>
 
     <Button
         android:id="@+id/button_cancel"
         android:layout_width="151dp"
-        android:layout_height="40dp"
-        android:text="@string/cancel"
-        android:layout_marginTop="68dp"
+        android:layout_height="55dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="9dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/edit_text"
-        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="#F3F5F8"
+        android:text="@string/cancel"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        app:cornerRadius="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_add"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_text" />
 
     <Button
         android:id="@+id/button_add"
         android:layout_width="151dp"
-        android:layout_height="40dp"
-        android:text="@string/add"
+        android:layout_height="55dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/edit_text"
-        app:layout_constraintStart_toEndOf="@id/button_cancel"
+        android:backgroundTint="#3599FF"
+        android:text="@string/add"
+        android:textAllCaps="false"
+        app:cornerRadius="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/button_cancel"
+        app:layout_constraintTop_toBottomOf="@id/edit_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
