Fix main fragment screen
Fix display main fragment screen.

--- a/app/src/main/res/layout/fragment_daily_weather.xml
+++ b/app/src/main/res/layout/fragment_daily_weather.xml
@@ -31,6 +31,7 @@
             tools:text="@tools:sample/lorem"
             android:textColor="#2A2D33"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:gravity="center" />
 
         <ImageButton
