--- a/app/src/main/res/layout/header_item.xml
+++ b/app/src/main/res/layout/header_item.xml
@@ -38,6 +38,7 @@
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
+        android:textStyle="bold"
         tools:text="@tools:sample/lorem" />
 
     <TextView
