--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -1,62 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="343dp"
     android:layout_height="206dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/rounded_corner"
     android:layout_marginHorizontal="25dp"
+    android:layout_marginTop="8dp"
+    android:background="@drawable/rounded_corner"
     android:orientation="vertical"
-    android:paddingTop="16dp"
     android:paddingHorizontal="20dp"
-    android:layout_marginTop="8dp">
+    android:paddingTop="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="28dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/date"
             android:layout_width="118dp"
             android:layout_height="28dp"
-            tools:text="@tools:sample/lorem"
-            android:textSize="16sp"
-            android:textColor="@color/black"
+            android:layout_marginEnd="79dp"
             android:maxLines="1"
-            android:layout_marginEnd="79dp"/>
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            tools:text="@tools:sample/lorem" />
 
         <TextView
             android:id="@+id/temp"
             android:layout_width="26dp"
             android:layout_height="28dp"
-            tools:text="13"
-            android:textSize="16sp"
-            android:textColor="@color/black"
+            android:layout_marginEnd="8dp"
             android:maxLines="1"
-            android:layout_marginEnd="8dp"/>
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="13" />
 
         <TextView
             android:id="@+id/max_temp"
             android:layout_width="26dp"
             android:layout_height="28dp"
-            tools:text="13"
+            android:layout_marginEnd="16dp"
+            android:maxLines="1"
             android:textColor="#8F96A1"
             android:textSize="16sp"
-            android:maxLines="1"
-            android:layout_marginEnd="16dp"/>
+            android:textStyle="bold"
+            tools:text="13" />
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="30dp"
             android:layout_height="25dp"
-            tools:src="@tools:sample/avatars"/>
+            tools:src="@tools:sample/avatars" />
 
     </LinearLayout>
 
     <View
         android:layout_width="300dp"
         android:layout_height="1dp"
-        android:background="#D9E0EA"/>
+        android:background="#D9E0EA" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
