--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -35,6 +35,18 @@
         app:layout_constraintBottom_toBottomOf="@id/edit_text"
         app:layout_constraintTop_toTopOf="@id/edit_text"/>
 
+    <ImageButton
+        android:id="@+id/img_remove"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:tint="#8F96A1"
+        android:src="@drawable/plus"
+        android:background="@color/white"
+        android:layout_marginEnd="14dp"
+        app:layout_constraintEnd_toEndOf="@id/edit_text"
+        app:layout_constraintBottom_toBottomOf="@id/edit_text"
+        app:layout_constraintTop_toTopOf="@id/edit_text"/>
+
     <Button
         android:id="@+id/button_cancel"
         android:layout_width="151dp"
@@ -46,7 +58,7 @@
         android:backgroundTint="#F3F5F8"
         android:text="@string/cancel"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="#707782"
         app:cornerRadius="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_add"
