--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="343dp"
     android:layout_height="206dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="25dp"
     android:layout_marginTop="8dp"
     android:background="@drawable/rounded_corner"
@@ -27,7 +28,7 @@
             tools:text="@tools:sample/lorem" />
 
         <TextView
-            android:id="@+id/temp"
+            android:id="@+id/minTemp"
             android:layout_width="26dp"
             android:layout_height="28dp"
             android:layout_marginEnd="8dp"
@@ -38,7 +39,7 @@
             tools:text="13" />
 
         <TextView
-            android:id="@+id/max_temp"
+            android:id="@+id/maxTemp"
             android:layout_width="26dp"
             android:layout_height="28dp"
             android:layout_marginEnd="16dp"
@@ -60,5 +61,13 @@
         android:layout_width="300dp"
         android:layout_height="1dp"
         android:background="#D9E0EA" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerHours"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal"
+        tools:listitem="@layout/hours_item"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
