--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/daily_item"
     android:layout_width="343dp"
     android:layout_height="206dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
