--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,14 @@
         android:id="@+id/dailyWeatherFragment"
         android:name="com.example.weatherapp.weather.DailyWeatherFragment"
         android:label="fragment_daily_weather"
-        tools:layout="@layout/fragment_daily_weather" />
+        tools:layout="@layout/fragment_daily_weather" >
+        <action
+            android:id="@+id/action_dailyWeatherFragment_to_searchDialogFragment"
+            app:destination="@id/searchDialogFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/searchDialogFragment"
+        android:name="com.example.weatherapp.dialogweather.SearchDialogFragment"
+        android:label="fragment_search_dialog"
+        tools:layout="@layout/fragment_search_dialog" />
 </navigation>
