--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,5 +18,9 @@
         android:id="@+id/searchDialogFragment"
         android:name="com.example.weatherapp.dialogweather.SearchDialogFragment"
         android:label="fragment_search_dialog"
-        tools:layout="@layout/fragment_search_dialog" />
+        tools:layout="@layout/fragment_search_dialog" >
+        <argument
+            android:name="getCityName"
+            app:argType="string" />
+    </dialog>
 </navigation>
