--- a/features/weather/src/main/res/layout/fragment_daily_weather.xml
+++ b/features/weather/src/main/res/layout/fragment_daily_weather.xml
@@ -18,9 +18,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
-        android:layout_width="match_parent"
+        android:layout_width="343dp"
         android:layout_height="0dp"
-        android:layout_marginTop="12dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
