--- a/features/weather/src/main/res/layout/toolbar.xml
+++ b/features/weather/src/main/res/layout/toolbar.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
-    android:layout_width="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:layout_width="375dp"
     android:layout_height="?android:attr/actionBarSize"
     android:background="#FFFFFF">
 
@@ -25,14 +26,15 @@
 
         <TextView
             android:id="@+id/city"
-            android:layout_width="240dp"
+            android:layout_width="279dp"
             android:layout_height="30dp"
             android:gravity="center"
             android:textColor="#2A2D33"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:maxLines="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/loader"
+            app:layout_constraintEnd_toStartOf="@id/search"
             app:layout_constraintStart_toEndOf="@id/location"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@tools:sample/lorem" />
@@ -43,9 +45,9 @@
             android:layout_height="32dp"
             android:background="@drawable/rounded_corner"
             android:src="@drawable/loader"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/search"
-            app:layout_constraintStart_toEndOf="@id/city"
+            app:layout_constraintEnd_toEndOf="@id/city"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="#8F96A1" />
 
@@ -56,8 +58,7 @@
             android:background="@drawable/rounded_corner"
             android:src="@drawable/search"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/loader"
+            app:layout_constraintStart_toEndOf="@id/city"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="#8F96A1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
