--- a/features/weather/src/main/res/navigation/weather_nav_graph.xml
+++ b/features/weather/src/main/res/navigation/weather_nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/nav_graph_weather"
     app:startDestination="@id/dailyWeatherFragment">
 
     <fragment
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_dailyWeatherFragment_to_searchDialogFragment"
             app:destination="@id/searchDialogFragment" />
+        <action
+            android:id="@+id/action_dailyWeatherFragment_to_nav_graph_city"
+            app:destination="@id/nav_graph_city" />
     </fragment>
     <dialog
         android:id="@+id/searchDialogFragment"
@@ -20,4 +23,6 @@
         android:label="fragment_search_dialog"
         tools:layout="@layout/fragment_search_dialog" >
     </dialog>
+    <include app:graph="@navigation/city_nav_graph" />
+
 </navigation>
