--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -4,11 +4,11 @@
     android:id="@+id/app_nav_graph"
     app:startDestination="@id/nav_graph_weather">
 
-    <include
-        app:graph="@navigation/weather_nav_graph">
-    </include>
+    <include app:graph="@navigation/weather_nav_graph" />
     <include app:graph="@navigation/city_nav_graph" />
     <action
         android:id="@+id/action_dailyWeatherFragment_to_cityFragment"
-        app:destination="@id/city_nav_graph" />
+        app:destination="@id/city_nav_graph" >
+    </action>
+
 </navigation>
