--- a/features/weather/src/main/res/navigation/weather_nav_graph.xml
+++ b/features/weather/src/main/res/navigation/weather_nav_graph.xml
@@ -12,7 +12,8 @@
         tools:layout="@layout/fragment_daily_weather" >
         <action
             android:id="@+id/action_dailyWeatherFragment_to_searchDialogFragment"
-            app:destination="@id/searchDialogFragment" />
+            app:destination="@id/searchDialogFragment">
+        </action>
     </fragment>
     <dialog
         android:id="@+id/searchDialogFragment"
