--- a/features/weather/src/main/res/layout/header_item.xml
+++ b/features/weather/src/main/res/layout/header_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/header_item"
     android:layout_width="343dp"
     android:layout_height="280dp"
-    android:layout_gravity="center_horizontal"
+    android:layout_marginHorizontal="25dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/ic_daily_bg"
