--- a/features/weather/src/main/res/layout/fragment_daily_weather.xml
+++ b/features/weather/src/main/res/layout/fragment_daily_weather.xml
@@ -12,9 +12,10 @@
         android:layout_height="?android:attr/actionBarSize"
         android:background="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-    <ImageButton
+        <ImageButton
             android:id="@+id/location"
             android:layout_width="32dp"
             android:layout_height="32dp"
@@ -50,6 +51,7 @@
             android:layout_marginEnd="25dp"
             android:background="@drawable/rounded_corner"
             app:tint="#8F96A1" />
+
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
