--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -2,13 +2,20 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/nav_graph_weather">
+    app:startDestination="@id/weather_nav_graph">
 
     <include app:graph="@navigation/weather_nav_graph" />
     <include app:graph="@navigation/city_nav_graph" />
+    <include app:graph="@navigation/dialog_nav_graph" />
+
     <action
         android:id="@+id/action_dailyWeatherFragment_to_cityFragment"
         app:destination="@id/city_nav_graph" >
+    </action>
+
+    <action
+        android:id="@+id/action_dailyWeatherFragment_to_searchDialogFragment"
+        app:destination="@id/dialog_nav_graph" >
     </action>
 
 </navigation>
