--- a/features/windowdialog/src/main/res/layout/fragment_search_dialog.xml
+++ b/features/windowdialog/src/main/res/layout/fragment_search_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_width="343dp"
     android:layout_height="180dp"
     android:background="@drawable/rounded_corner_dialog"
-    tools:context=".dialogweather.SearchDialogFragment">
+    tools:context="com.example.windowdialog.SearchDialogFragment">
 
     <EditText
         android:id="@+id/edit_text"
