--- a/features/weather/src/main/res/layout/daily_item.xml
+++ b/features/weather/src/main/res/layout/daily_item.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/daily_item"
-    android:layout_width="343dp"
-    android:layout_height="206dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="25dp"
-    android:layout_marginTop="8dp"
-    android:background="@drawable/rounded_corner"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
     android:orientation="vertical"
-    android:paddingHorizontal="20dp"
-    android:paddingTop="16dp">
+    android:paddingTop="16dp"
+    tools:background="@color/blue">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="28dp"
+        android:layout_marginStart="30dp"
         android:layout_marginBottom="16dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/date"
-            android:layout_width="118dp"
-            android:layout_height="28dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="79dp"
-            android:maxLines="1"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            tools:text="@tools:sample/lorem" />
+            android:text="@string/tooday"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/minTemp"
@@ -34,7 +31,7 @@
             android:layout_height="28dp"
             android:layout_marginEnd="8dp"
             android:maxLines="1"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="13" />
@@ -45,30 +42,26 @@
             android:layout_height="28dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
-            android:textColor="#8F96A1"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="13" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            tools:src="@tools:sample/avatars" />
-
     </LinearLayout>
 
     <View
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#D9E0EA" />
+        android:layout_marginHorizontal="30dp"
+        android:background="@color/white" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerHours"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginHorizontal="15dp"
         android:orientation="horizontal"
-        tools:listitem="@layout/hours_item"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/hours_item" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
