Revert "Feature/add bottom navigation"

--- a/features/weather/src/main/res/layout/daily_item.xml
+++ b/features/weather/src/main/res/layout/daily_item.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/daily_item"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
+    android:layout_width="343dp"
+    android:layout_height="206dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="25dp"
+    android:layout_marginTop="8dp"
+    android:background="@drawable/rounded_corner"
     android:orientation="vertical"
-    android:paddingTop="16dp"
-    tools:background="@color/blue">
+    android:paddingHorizontal="20dp"
+    android:paddingTop="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="28dp"
-        android:layout_marginStart="30dp"
         android:layout_marginBottom="16dp"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/date"
+            android:layout_width="118dp"
+            android:layout_height="28dp"
             android:layout_marginEnd="79dp"
-            android:text="@string/tooday"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            tools:text="@tools:sample/lorem" />
 
         <TextView
             android:id="@+id/minTemp"
@@ -31,7 +34,7 @@
             android:layout_height="28dp"
             android:layout_marginEnd="8dp"
             android:maxLines="1"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="13" />
@@ -42,26 +45,30 @@
             android:layout_height="28dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
-            android:textColor="@color/white"
+            android:textColor="#8F96A1"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="13" />
 
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            tools:src="@tools:sample/avatars" />
+
     </LinearLayout>
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="1dp"
-        android:layout_marginHorizontal="30dp"
-        android:background="@color/white" />
+        android:background="#D9E0EA" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerHours"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/hours_item" />
+        android:orientation="horizontal"
+        tools:listitem="@layout/hours_item"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
