--- a/features/weather/src/main/res/layout/hours_item.xml
+++ b/features/weather/src/main/res/layout/hours_item.xml
@@ -2,39 +2,41 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/hours_item"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="15dp"
+    android:layout_width="73dp"
+    android:layout_height="114dp"
     android:background="@drawable/rounded_corner_hours"
     android:orientation="vertical"
-    android:paddingVertical="10dp">
+    android:layout_marginEnd="6dp"
+    android:layout_marginTop="15dp" >
 
     <TextView
         android:id="@+id/hours_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="45dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="9dp"
         android:layout_gravity="center"
         android:maxLines="1"
-        android:textColor="@color/white"
+        android:textColor="#8F96A1"
         android:textSize="16sp"
-        tools:text="title" />
+        tools:text="@tools:sample/lorem" />
 
     <ImageView
         android:id="@+id/hours_image"
         android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_gravity="center"
-        android:layout_marginVertical="10dp"
         tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/hours_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="26dp"
+        android:layout_height="28dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="12dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         tools:text="13" />
 
