--- a/features/weather/src/main/res/drawable/rounded_corner_hours.xml
+++ b/features/weather/src/main/res/drawable/rounded_corner_hours.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/blue"/>
+            <solid android:color="#EAECEF"/>
             <corners android:radius="15dip"/>
         </shape>
     </item>
