--- a/features/weather/src/main/res/layout/fragment_daily_weather.xml
+++ b/features/weather/src/main/res/layout/fragment_daily_weather.xml
@@ -1,45 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@color/blue"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.weatherapp.com.example.weather.DailyWeatherFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="#FFFFFF"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageButton
             android:id="@+id/location"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="25dp"
-            android:background="@drawable/rounded_corner"
             android:src="@drawable/location"
+            android:background="@drawable/rounded_corner"
+            android:layout_marginStart="25dp"
             app:tint="#8F96A1" />
+
+        <TextView
+            android:id="@+id/city"
+            android:layout_width="240dp"
+            android:layout_height="30dp"
+            tools:text="@tools:sample/lorem"
+            android:textColor="#2A2D33"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="center" />
 
         <ImageButton
             android:id="@+id/loader"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/rounded_corner"
             android:src="@drawable/loader"
-            app:tint="#8F96A1" />
+            android:background="@drawable/rounded_corner"
+            app:tint="#8F96A1"
+            android:layout_marginEnd="8dp" />
 
         <ImageButton
             android:id="@+id/search"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:src="@drawable/search"
             android:layout_marginEnd="25dp"
             android:background="@drawable/rounded_corner"
-            android:src="@drawable/search"
             app:tint="#8F96A1" />
 
     </androidx.appcompat.widget.Toolbar>
@@ -48,12 +58,13 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
+        tools:listitem="@layout/daily_item"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:listitem="@layout/daily_item" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
