--- a/features/weather/src/main/res/layout/header_item.xml
+++ b/features/weather/src/main/res/layout/header_item.xml
@@ -2,98 +2,57 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/header_item"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="343dp"
+    android:layout_height="280dp"
+    android:layout_marginHorizontal="25dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="20dp"
     android:background="@drawable/ic_daily_bg"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/cityName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:maxLines="1"
-        android:textColor="#FFFFFF"
-        android:textSize="23sp"
-        tools:text="@tools:sample/lorem" />
-
-    <TextView
         android:id="@+id/today_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:maxLines="1"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        tools:text="@tools:sample/lorem" />
-
-    <TextView
-        android:id="@+id/today_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        tools:text="@tools:sample/lorem" />
-
-    <ImageView
-        android:id="@+id/today_icon"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        tools:src="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/today_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:layout_width="170dp"
+        android:layout_height="24dp"
+        android:layout_marginHorizontal="85dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:maxLines="1"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         tools:text="@tools:sample/lorem" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+    <ImageView
+        android:id="@+id/today_icon"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        tools:src="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/wind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="5dp"
-            android:maxLines="1"
-            android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            tools:text="@tools:sample/lorem" />
+    <TextView
+        android:id="@+id/today_temp"
+        android:layout_width="279dp"
+        android:layout_height="52dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="2dp"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        tools:text="@tools:sample/lorem" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+    <TextView
+        android:id="@+id/today_description"
+        android:layout_width="279dp"
+        android:layout_height="24dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        android:maxLines="1"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        tools:text="@tools:sample/lorem" />
 
-        <TextView
-            android:id="@+id/humidity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="30dp"
-            android:maxLines="1"
-            android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            tools:text="@tools:sample/lorem" />
-
-    </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
