--- a/features/weather/src/main/res/layout/hours_item.xml
+++ b/features/weather/src/main/res/layout/hours_item.xml
@@ -4,10 +4,10 @@
     android:id="@+id/hours_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="15dp"
+    android:layout_marginHorizontal="@dimen/d_margin_15dp"
     android:background="@drawable/rounded_corner_hours"
     android:orientation="vertical"
-    android:paddingVertical="10dp">
+    android:paddingVertical="@dimen/d_padding_10dp">
 
     <TextView
         android:id="@+id/hours_time"
@@ -24,7 +24,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="@dimen/d_margin_10dp"
         tools:src="@tools:sample/avatars" />
 
     <TextView
