--- a/features/weather/src/main/res/layout/daily_item.xml
+++ b/features/weather/src/main/res/layout/daily_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/daily_item"
@@ -8,7 +8,7 @@
     android:layout_marginTop="@dimen/d_margin_20dp"
     android:orientation="vertical"
     android:paddingTop="@dimen/d_padding_16dp"
-    tools:background="@color/blue">
+    tools:background="@color/purple">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,4 +76,4 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/hours_item" />
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</LinearLayout>
