--- a/features/weather/src/main/res/layout/hours_item.xml
+++ b/features/weather/src/main/res/layout/hours_item.xml
@@ -5,9 +5,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/d_margin_15dp"
-    android:background="@drawable/rounded_corner_hours"
     android:orientation="vertical"
-    android:paddingVertical="@dimen/d_padding_10dp">
+    android:paddingVertical="@dimen/d_padding_10dp"
+    tools:background="@color/purple">
 
     <TextView
         android:id="@+id/hours_time"
