Add recycler view. Refactoring code

--- a/app/src/main/res/drawable/favorite.xml
+++ b/app/src/main/res/drawable/favorite.xml
@@ -5,7 +5,5 @@
     android:viewportHeight="23">
   <path
       android:pathData="M12.5,23L10.688,21.346C4.25,15.492 0,11.619 0,6.894C0,3.021 3.025,0 6.875,0C9.05,0 11.137,1.015 12.5,2.607C13.863,1.015 15.95,0 18.125,0C21.975,0 25,3.021 25,6.894C25,11.619 20.75,15.492 14.313,21.346L12.5,23Z"
-      android:strokeAlpha="0.5"
-      android:fillColor="#ffffff"
-      android:fillAlpha="0.5"/>
+      android:fillColor="#ffffff"/>
 </vector>
