--- a/features/weather/src/main/res/values/themes.xml
+++ b/features/weather/src/main/res/values/themes.xml
@@ -1,8 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.WeatherApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <style name="Theme.Weather" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     </style>
 </resources>
